10.scaleout/yml/hpa/03-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sptest-ingress
  namespace: springboot-prj-myapp
spec:
  rules:
  - host: my.springtest
    http:
      paths:
      - backend:
          serviceName: myapp-spring-boot-service
          servicePort: 8080
        path: /
